# dark-souls-3

./: Cargo.toml
core/: Cargo.toml
core/src/: error.rs  game.rs  lib.rs  overlay.rs  pattern.rs  process.rs  sync.rs  window.rs
dark-soul-3/: Cargo.toml
dark-soul-3/src/: main.rs
dll/: Cargo.toml
dll/src/: lib.rs
src/: error.rs  game.rs  main.rs  misc.rs  overlay.rs  process.rs
src/process/: mod.rs
ui/: Cargo.toml
ui/src/: main.rs
