[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.50"
thiserror = "1.0.30"
winapi = { version = "0.3.8", features = ["uxtheme","wingdi","winuser","dwmapi","basetsd","errhandlingapi","handleapi", "memoryapi", "minwindef","windef", "ntdef", "processthreadsapi", "tlhelp32", "winnt", "wow64apiset"]}
pelite = "0.9.0"
iced-x86 = "1.15.0"
hex = "0.4.3"
[dependencies.windows]
version = "0.29"
features = [
    "Foundation_Numerics",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D_Common",
    'Win32_Graphics_DirectWrite',
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_UI_Animation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
]