[package]
name = "dll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = ["consoleapi", "minwindef"] }
core = { path = "../core"}

[lib]
crate-type = ["cdylib"]
