[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core"}
imgui = "0.8.0"
glium = { version = "0.30", default-features = true }
imgui-glium-renderer = "0.8.0"
imgui-winit-support = "0.8.0"
